--- a/OC/config.plist
+++ b/OC/config.plist
@@ -1035,7 +1035,7 @@
                     <key>Comment</key>
                     <string>V1.1.4</string>
                     <key>Enabled</key>
-                    <false/>
+                    <true/>
                     <key>ExecutablePath</key>
                     <string>Contents/MacOS/VoodooInput</string>
                     <key>MaxKernel</key>
