--- a/OC/Kexts/USBPorts.kext/Contents/Info.plist
+++ b/OC/Kexts/USBPorts.kext/Contents/Info.plist
@@ -5,7 +5,7 @@
         <key>CFBundleDevelopmentRegion</key>
         <string>English</string>
         <key>CFBundleGetInfoString</key>
-        <string>Tarik 1.0 Copyright © 2018-2023 Headsoft. All rights reserved.</string>
+        <string>Hackintool 3.9.8 - takobaba</string>
         <key>CFBundleIdentifier</key>
         <string>com.Headsoft.USBPorts</string>
         <key>CFBundleInfoDictionaryVersion</key>
@@ -41,19 +41,19 @@
                     <key>kUSBSleepPortCurrentLimit</key>
                     <integer>2100</integer>
                     <key>kUSBSleepPowerSupply</key>
-                    <integer>2600</integer>
+                    <integer>5100</integer>
                     <key>kUSBWakePortCurrentLimit</key>
                     <integer>2100</integer>
                     <key>kUSBWakePowerSupply</key>
-                    <integer>3200</integer>
+                    <integer>5100</integer>
                     <key>port-count</key>
-                    <data>EwAAAA==</data>
+                    <data>EAAAAA==</data>
                     <key>ports</key>
                     <dict>
                         <key>HS01</key>
                         <dict>
                             <key>UsbConnector</key>
-                            <integer>3</integer>
+                            <integer>0</integer>
                             <key>name</key>
                             <string>HS01</string>
                             <key>port</key>
@@ -62,7 +62,7 @@
                         <key>HS02</key>
                         <dict>
                             <key>UsbConnector</key>
-                            <integer>3</integer>
+                            <integer>0</integer>
                             <key>name</key>
                             <string>HS02</string>
                             <key>port</key>
@@ -86,15 +86,6 @@
                             <key>port</key>
                             <data>BAAAAA==</data>
                         </dict>
-                        <key>HS05</key>
-                        <dict>
-                            <key>UsbConnector</key>
-                            <integer>255</integer>
-                            <key>name</key>
-                            <string>HS05</string>
-                            <key>port</key>
-                            <data>BQAAAA==</data>
-                        </dict>
                         <key>HS06</key>
                         <dict>
                             <key>UsbConnector</key>
@@ -112,33 +103,6 @@
                             <string>HS07</string>
                             <key>port</key>
                             <data>BwAAAA==</data>
-                        </dict>
-                        <key>HS08</key>
-                        <dict>
-                            <key>UsbConnector</key>
-                            <integer>255</integer>
-                            <key>name</key>
-                            <string>HS08</string>
-                            <key>port</key>
-                            <data>CAAAAA==</data>
-                        </dict>
-                        <key>HS09</key>
-                        <dict>
-                            <key>UsbConnector</key>
-                            <integer>255</integer>
-                            <key>name</key>
-                            <string>HS09</string>
-                            <key>port</key>
-                            <data>CQAAAA==</data>
-                        </dict>
-                        <key>HS10</key>
-                        <dict>
-                            <key>UsbConnector</key>
-                            <integer>255</integer>
-                            <key>name</key>
-                            <string>HS10</string>
-                            <key>port</key>
-                            <data>EAAAAA==</data>
                         </dict>
                         <key>SS01</key>
                         <dict>
