--- a/OC/config.plist
+++ b/OC/config.plist
@@ -8,7 +8,7 @@
             <array>
                 <dict>
                     <key>Comment</key>
-                    <string>Disable Thunderbolt</string>
+                    <string>SSDT-OFFTB|T480</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -16,7 +16,7 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string>SSDT-AC</string>
+                    <string>SSDT-AC|T480</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -24,15 +24,15 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string>SSDT-BATX</string>
+                    <string>SSDT-BATX|T480</string>
                     <key>Enabled</key>
-                    <true/>
+                    <false/>
                     <key>Path</key>
                     <string>SSDT-BATX.aml</string>
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string>SSDT-DEVICE</string>
+                    <string>SSDT-DEVICE|T480</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -40,7 +40,7 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string>SSDT-EC</string>
+                    <string>SSDT-EC|T480</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -48,7 +48,7 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string>SSDT-HWAC</string>
+                    <string>SSDT-HWAC|T480</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -56,7 +56,7 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string>SSDT-INIT</string>
+                    <string>SSDT-INIT|T480</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -64,7 +64,7 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string>SSDT-SLEEP</string>
+                    <string>SSDT-SLEEP|T480</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -72,7 +72,7 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string>SSDT-UTILS</string>
+                    <string>SSDT-UTILS|T480</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -80,7 +80,7 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string>SSDT-YOGASMC</string>
+                    <string>SSDT-YOGASMC|T480</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -88,7 +88,7 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string>SSDT-GPRW.aml</string>
+                    <string>SSDT-GPRW|DORTANIA</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -96,7 +96,7 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string>BackLight</string>
+                    <string>BackLight|Dortania</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -104,7 +104,7 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string></string>
+                    <string>EC-USBX|Dortania</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -112,7 +112,7 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string></string>
+                    <string>PS2</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -120,7 +120,7 @@
                 </dict>
                 <dict>
                     <key>Comment</key>
-                    <string></string>
+                    <string>Dortania</string>
                     <key>Enabled</key>
                     <true/>
                     <key>Path</key>
@@ -783,6 +783,8 @@
                 <true/>
                 <key>EnableWriteUnprotector</key>
                 <true/>
+                <key>FixupAppleEfiImages</key>
+                <false/>
                 <key>ForceBooterSignature</key>
                 <false/>
                 <key>ForceExitBootServices</key>
@@ -889,7 +891,7 @@
                     <key>BundlePath</key>
                     <string>Lilu.kext</string>
                     <key>Comment</key>
-                    <string>V1.6.6 | Lilu.kext</string>
+                    <string>V1.6.7 | Lilu.kext</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -943,7 +945,7 @@
                     <key>BundlePath</key>
                     <string>WhateverGreen.kext</string>
                     <key>Comment</key>
-                    <string>V1.6.5 | WhateverGreen.kext</string>
+                    <string>V1.6.6 | WhateverGreen.kext</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1069,7 +1071,7 @@
                     <key>BundlePath</key>
                     <string>AppleALC.kext</string>
                     <key>Comment</key>
-                    <string>V1.8.3 | AppleALC.kext</string>
+                    <string>V1.8.7 | AppleALC.kext</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1157,6 +1159,24 @@
                     <key>Arch</key>
                     <string>Any</string>
                     <key>BundlePath</key>
+                    <string>ECEnabler.kext</string>
+                    <key>Comment</key>
+                    <string>V1.0.4</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string>Contents/MacOS/ECEnabler</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
                     <string>BrightnessKeys.kext</string>
                     <key>Comment</key>
                     <string>V1.0.3 | BrightnessKeys.kext</string>
@@ -1211,9 +1231,9 @@
                     <key>Arch</key>
                     <string>Any</string>
                     <key>BundlePath</key>
-                    <string>USBPortsPI154.kext</string>
+                    <string>USBPorts.kext</string>
                     <key>Comment</key>
-                    <string>V1.0</string>
+                    <string>V1.0 | SMBIOS15.4 | Hackintool</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1249,7 +1269,7 @@
                     <key>BundlePath</key>
                     <string>NVMeFix.kext</string>
                     <key>Comment</key>
-                    <string>V1.1.0 | NVMeFix.kext</string>
+                    <string>V1.1.1 | NVMeFix.kext</string>
                     <key>Enabled</key>
                     <true/>
                     <key>ExecutablePath</key>
@@ -1459,6 +1479,96 @@
                     <key>PlistPath</key>
                     <string>Contents/Info.plist</string>
                 </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
+                    <string>RestrictEvents.kext</string>
+                    <key>Comment</key>
+                    <string>V1.1.3</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string>Contents/MacOS/RestrictEvents</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
+                    <string>IOSkywalkFamily.kext</string>
+                    <key>Comment</key>
+                    <string>V1.0</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string>Contents/MacOS/IOSkywalkFamily</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
+                    <string>AMFIPass.kext</string>
+                    <key>Comment</key>
+                    <string>V1.3.1</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string>Contents/MacOS/AMFIPass</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
+                    <string>IO80211FamilyLegacy.kext</string>
+                    <key>Comment</key>
+                    <string>V1200.12.2b1</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string>Contents/MacOS/IO80211FamilyLegacy</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>BundlePath</key>
+                    <string>IO80211FamilyLegacy.kext/Contents/PlugIns/AirPortBrcmNIC.kext</string>
+                    <key>Comment</key>
+                    <string>V1400.1.1</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>ExecutablePath</key>
+                    <string>Contents/MacOS/AirPortBrcmNIC</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string></string>
+                    <key>PlistPath</key>
+                    <string>Contents/Info.plist</string>
+                </dict>
             </array>
             <key>Block</key>
             <array>
@@ -1477,6 +1587,22 @@
                     <string></string>
                     <key>Strategy</key>
                     <string>Disable</string>
+                </dict>
+                <dict>
+                    <key>Arch</key>
+                    <string>Any</string>
+                    <key>Comment</key>
+                    <string>Allow IOSkywalk Downgrade</string>
+                    <key>Enabled</key>
+                    <true/>
+                    <key>Identifier</key>
+                    <string>com.apple.iokit.IOSkywalkFamily</string>
+                    <key>MaxKernel</key>
+                    <string></string>
+                    <key>MinKernel</key>
+                    <string>23.0.0</string>
+                    <key>Strategy</key>
+                    <string>Exclude</string>
                 </dict>
             </array>
             <key>Emulate</key>
@@ -1893,6 +2019,8 @@
                 <false/>
                 <key>HideAuxiliary</key>
                 <false/>
+                <key>InstanceIdentifier</key>
+                <string></string>
                 <key>LauncherOption</key>
                 <string>Disabled</string>
                 <key>LauncherPath</key>
@@ -1960,7 +2088,7 @@
                 <key>ScanPolicy</key>
                 <integer>19857667</integer>
                 <key>SecureBootModel</key>
-                <string>Default</string>
+                <string>Disabled</string>
                 <key>Vault</key>
                 <string>Optional</string>
             </dict>
@@ -2309,9 +2437,9 @@
                     <key>SystemAudioVolume</key>
                     <data>Rg==</data>
                     <key>boot-args</key>
-                    <string>rtcfx_exclude=80-AB agdpmod=vit9696 brcmfx-driver=1</string>
+                    <string>rtcfx_exclude=80-AB agdpmod=vit9696 revpatch=sbvmm -amfipassbeta</string>
                     <key>csr-active-config</key>
-                    <data>AAAAAA==</data>
+                    <data>AwgAAA==</data>
                     <key>prev-lang:kbd</key>
                     <string>656E2D55533A30</string>
                     <key>run-efi-updater</key>
@@ -2332,6 +2460,7 @@
                 <array>
                     <string>boot-args</string>
                     <string>ForceDisplayRotationInEFI</string>
+                    <string>csr-active-config</string>
                 </array>
             </dict>
             <key>LegacyOverwrite</key>
@@ -2669,6 +2798,8 @@
                 <key>ResizeGpuBars</key>
                 <integer>-1</integer>
                 <key>ResizeUsePciRbIo</key>
+                <false/>
+                <key>ShimRetainProtocol</key>
                 <false/>
                 <key>TscSyncTimeout</key>
                 <integer>0</integer>
